# rust_stack_example

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  schema.sql
benches/: requests_bench.rs
src/: error.rs  lib.rs  main.rs
src/error/: database_connect_error.rs  database_initialization_error.rs  database_upsert_error.rs  mod.rs  route_error.rs  server_error.rs  server_startup_error.rs
src/model/: financial_data_query.rs  financial_data_report.rs  financial_data_response.rs  info.rs  mod.rs  pagination.rs  statistics_query.rs  statistics_report.rs  statistics_response.rs
src/routes/: financial_data.rs  mod.rs  statistics.rs
src/tasks/: database_connect.rs  database_initialization.rs  database_upsert.rs  mod.rs  server_execution.rs
